实现用户认证模块

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -13,7 +13,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "typeRoots": ["./node_modules/@types"],
+    "typeRoots": ["./src/types/interfaces"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
   },
