--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -14,11 +15,12 @@
     "axios": "^1.13.2",
     "draft-js": "^0.11.7",
     "inputmask": "^5.0.9",
-    "jwt-decode": "^4.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "uuid": "^13.0.0",
@@ -26,11 +28,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
+
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -50,6 +52,12 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.18"
+    "@types/draft-js": "^0.11.20",
+    "@types/inputmask": "^5.0.7",
+    "@types/react-transition-group": "^4.4.12",
+    "@types/validator": "^13.15.10",
+    "@vitejs/plugin-react-swc": "^4.2.2",
+    "tailwindcss": "^3.4.18",
+    "vite": "^7.2.4"
   }
 }
