--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -9,7 +10,6 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
     "axios": "^1.13.2",
@@ -32,7 +32,6 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -54,10 +53,12 @@
   "devDependencies": {
     "@types/draft-js": "^0.11.20",
     "@types/inputmask": "^5.0.7",
+    "@types/node": "^20.19.25",
     "@types/react-transition-group": "^4.4.12",
     "@types/validator": "^13.15.10",
     "@vitejs/plugin-react-swc": "^4.2.2",
+    "autoprefixer": "^10.4.22",
     "tailwindcss": "^3.4.18",
-    "vite": "^7.2.4"
+    "vite": "^5.4.11"
   }
 }
